# frontend

./: .dependency-cruiser.cjs  .dockerignore  .env  .env.development  .env.local.example  .env.prod  .geminiignore  .gitignore  .stylelintrc.json  AGENTS.md  CLAUDE.md  Caddyfile  Caddyfile.admin  Dockerfile  Dockerfile.admin  Makefile  README.md  admin.html  biome.json  index.html  package-lock.json  package.json  playwright.config.mjs  playwright.smoke.config.mjs  stylelint.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.scripts.config.ts
.auth/: README.md
.github/: pull_request_template.md
.storybook/: main.ts
admin/: main.ts
docs/: runtime-config.md  testing-strategy.md
e2e/: artist-image-ui.spec.ts  css-antipattern-verification.spec.ts  dashboard-lane-classification.spec.ts  detail-sheet-dismiss.spec.ts  onboarding-flow.spec.ts  pwa-circuit-precache.spec.ts  pwa-install-prompt.spec.ts  pwa-offline-cache.spec.ts  pwa-settings.spec.ts  snack-bar.spec.ts  toast-notification.spec.ts
prover/: Cargo.toml
prover/pkg/: package.json  ticketcheck_prover.d.ts  ticketcheck_prover.js  ticketcheck_prover_bg.wasm  ticketcheck_prover_bg.wasm.d.ts
prover/src/: lib.rs
public/: config.json  config.local.json.example  manifest.json  manifest.webmanifest  sw.js
scripts/: capture-auth-state-password.ts  capture-auth-state.ts  check-brand-vocabulary.ts  generate-licenses.ts  known-entities.ts  verify-build-templates.lib.ts  verify-build-templates.spec.ts  verify-build-templates.ts  verify-bundle-isolation.lib.ts  verify-bundle-isolation.spec.ts  (+1 more)
(+588 files in other folders)
