[package]
name = "ticketcheck-prover"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "MIT/Apache browser WASM Groth16 prover (arkworks/ark-circom) for the TicketCheck circuit. Replaces GPL snarkjs."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ark-circom = "0.6.0"
ark-bn254 = "0.6"
ark-groth16 = { version = "0.6", default-features = false, features = ["std"] }
ark-snark = "0.6"
ark-ec = "0.6"
ark-ff = "0.6"
num-bigint = "0.4"
serde_json = "1"
wasm-bindgen = "=0.2.100"
js-sys = "=0.3.77"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer = { version = "=6.1.0-rc.3", default-features = false, features = ["default"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasmer = { version = "=6.1.0-rc.3", default-features = false, features = ["js-default"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[patch.crates-io]
ark-circom = { path = "vendor/ark-circom" }
